--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="layer">
           <div class="layer__end">
             <div class="layer__end_content">
-              <img src="img/HollowKnight.png" alt="Hollow Knight" />
+              <img src="./img/HollowKnight.png" alt="Hollow Knight" />
               <h3>End of journey</h3>
               <p>- ForoFora -</p>
               <p>- 2024 -</p>
